# fun-with-kokkos

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  hello.cpp
src/host_pinned_memory/: main.cpp
src/race_condition/: main.cpp
src/threads_and_streams/: main.cpp  space_instances.hpp
